--- a/main.html
+++ b/main.html
@@ -11,6 +11,17 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<form>
+		<label for="name"></label>
+		<input type="text" id="name" placeholder="Name">
+		<label for="phone">Phone Number</label>
+		<input type="text" id="name" placeholder="Phone Number">
+		<label for="address">Address</label>
+		<input type="text" id="address" placeholder="Address">
+		<input type="checkbox" value="Have you ever lived with a Dog before?" name="ch1">Have you ever   
+
+
+</form>
 </body>
 
 </html>
