--- a/main.html
+++ b/main.html
@@ -18,8 +18,14 @@
 		<input type="text" id="name" placeholder="Phone Number">
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address">
-		<input type="checkbox" value="Have you ever lived with a Dog before?" name="ch1">Have you ever   
-
+		<input type="checkbox" value="Have you ever lived with a Dog before?" name="ch1">Have you ever lived with a Dog befor?  
+		<label for="multiselect">Please select your preferred breeds</label>
+		<select id="multiselect">
+			<option value="lebra">Lebra</option>
+			<option value="german">German</option>
+			<option value="leo">Leo</option>
+		</select>
+		<button type="submit">Submit</button>
 
 </form>
 </body>
