--- a/main.html
+++ b/main.html
@@ -15,17 +15,17 @@
 		<label for="name"></label>
 		<input type="text" id="name" placeholder="Name">
 		<label for="phone">Phone Number</label>
-		<input type="text" id="name" placeholder="Phone Number">
+		<input type="text" id="phone" placeholder="Phone Number">
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address">
-		<input type="checkbox" value="Have you ever lived with a Dog before?" name="ch1">Have you ever lived with a Dog befor?  
-		<label for="multiselect">Please select your preferred breeds</label>
-		<select id="multiselect">
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?" name="ch1">Have you ever lived with a Dog befor?  
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
 			<option value="lebra">Lebra</option>
 			<option value="german">German</option>
 			<option value="leo">Leo</option>
 		</select>
-		<button type="submit">Submit</button>
+		<input id="submit" type="submit" value="submit">
 
 </form>
 </body>
