--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 			<option value="german">German</option>
 			<option value="leo">Leo</option>
 		</select>
-		<input id="submit" type="submit" value="submit">
+		<input id="submit" type="submit" value="Submit">
 
 </form>
 </body>
